# AndroidGameEngine

./: .gitignore  CppAndroidTest.sln  README.md  Win-GenerateProjects.bat  premake5.lua
AndroidRuntime/: AndroidRuntime.vcxproj  premake5.lua  settings.gradle.kts
AndroidRuntime/Source/: CMakeLists.txt  androidruntime.cpp
AndroidRuntime/Source/jni/: Android.mk
AndroidRuntime/app/: build.gradle.kts
AndroidRuntime/app/src/androidTest/java/com/victorkrogh/androidruntime/: ExampleInstrumentedTest.java
AndroidRuntime/app/src/main/: AndroidManifest.xml
AndroidRuntime/app/src/main/res/values/: strings.xml  themes.xml
AndroidRuntime/app/src/main/res/values-night/: themes.xml
AndroidRuntime/app/src/test/java/com/victorkrogh/androidruntime/: ExampleUnitTest.java
AndroidRuntime/gradle/wrapper/: gradle-wrapper.properties
Engine/: Engine.vcxproj  premake5.lua
Engine/Source/: Engine.h  Lib.cpp  Lib.h
Engine/Source/Engine/: Renderer.cpp  Renderer.h
Engine/Source/jni/: Android.mk
bin-int/Debug-android-x86_64/App/: App.androidproj.FileListAbsolute.txt  FileStringReplace.incremental  _XamarinBuildIsIncremental
bin-int/Debug-windows-x86_64/AndroidRuntime/: vc143.idb
bin-int/Debug-windows-x86_64/AndroidRuntime/AndroidRuntime.tlog/: AndroidRuntime.lastbuildstate
bin-int/Debug-windows-x86_64/Engine/Engine.tlog/: Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
